@@ -16,13 +16,12 @@ __email__ = "jwest@rcsb.rutgers.edu"
 __license__ = "Apache 2.0"
 
 import logging
+import os
 
 from rcsb.db.mongo.DocumentLoader import DocumentLoader
 from rcsb.db.processors.DataExchangeStatus import DataExchangeStatus
 from rcsb.db.processors.RepoHoldingsDataPrep import RepoHoldingsDataPrep
 from rcsb.db.processors.RepoHoldingsRemoteDataPrep import RepoHoldingsRemoteDataPrep
-
-# from rcsb.db.processors.RepoHoldingsDataPrep import RepoHoldingsDataPrep
 
 logger = logging.getLogger(__name__)
 
@@ -82,10 +81,24 @@ class RepoHoldingsEtlWorker(object):
             statusStartTimestamp = desp.setStartTime()
 
             discoveryMode = self.__cfgOb.get("DISCOVERY_MODE", sectionName=self.__cfgSectionName, default="local")
+            # ---
+            baseUrlPDB = self.__cfgOb.getPath("PDB_REPO_URL", sectionName=self.__cfgSectionName, default="https://ftp.wwpdb.org/pub")
+            fallbackUrlPDB = self.__cfgOb.getPath("PDB_REPO_FALLBACK_URL", sectionName=self.__cfgSectionName, default="https://ftp.wwpdb.org/pub")
+            edMapUrl = self.__cfgOb.getPath("RCSB_EDMAP_LIST_PATH", sectionName=self.__cfgSectionName, default=None)
+            #
+            kwD = {
+                "holdingsTargetUrl": os.path.join(baseUrlPDB, "pdb", "holdings"),
+                "holdingsFallbackUrl": os.path.join(fallbackUrlPDB, "pdb", "holdings"),
+                "edmapsLocator": edMapUrl,
+                "updateTargetUrl": os.path.join(baseUrlPDB, "pdb", "data", "status", "latest"),
+                "updateFallbackUrl": os.path.join(fallbackUrlPDB, "pdb", "data", "status", "latest"),
+                "filterType": self.__filterType,
+            }
+            # ---
             if discoveryMode == "local":
                 rhdp = RepoHoldingsDataPrep(cfgOb=self.__cfgOb, sandboxPath=self.__sandboxPath, cachePath=self.__cachePath, filterType=self.__filterType)
             else:
-                rhdp = RepoHoldingsRemoteDataPrep(self.__cachePath, filterType=self.__filterType)
+                rhdp = RepoHoldingsRemoteDataPrep(self.__cachePath, **kwD)
             #
             dl = DocumentLoader(
                 self.__cfgOb,
