@@ -323,3 +323,5 @@
  23-Sep-2021  V1.692 Simplify updates to RepoHoldingsDataPrep() for the update collection
  27-Sep-2021  V1.693 Add RepoHoldingsRemoteDataPrep and support for RepositoryProvider discoveryMode="remote"
  29-Sep-2021  V1.694 Make discovery mode an internal configuration property of RepositoryProvider()
+  8-Oct-2021  V1.695 Pass configuration URLs to RepositoryHoldingsRemoteDataPrep() and
+                     added support for building computed models schema
